--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "set NODE_ENV=production && node ./index.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +20,8 @@
     "node-restful": "^0.2.6",
     "nodemon": "^2.0.7",
     "socket.io": "^2.4.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
