--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "start": "set NODE_ENV=production && node ./index.js"
+    "start": "set NODE_ENV=production && node src/index.js"
   },
   "author": "",
   "license": "ISC",
