--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^5.11.18",
     "node-restful": "^0.2.6",
     "nodemon": "^2.0.7",
-    "socket.io": "^2.4.0"
+    "socket.io": "^2.4.0",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
