--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.18",
+    "mongoose": "^5.2.10",
     "node-restful": "^0.2.6",
     "nodemon": "^2.0.7",
-    "socket.io": "^2.4.0",
-    "dotenv": "^8.2.0"
+    "socket.io": "^2.4.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
